[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tier"
version = "0.0.0"
description = "Python Versioning CLI"
authors = [ "Josh Wycuff <Joshua.Wycuff@turner.com>",]
license = "MIT"
readme = "README.md"
[[tool.poetry.packages]]
include = "tier"

[tool.tier]
commit-id = "f684f16a9343e559b55c7ffffc5ca5f1cc1a556f"

[tool.poetry.dependencies]
python = ">=3.7,<4"
toml = "^0.10.2"

[tool.poetry.scripts]
tier = "tier.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = "^6.5.0"
